--- a/index.html
+++ b/index.html
@@ -1,2 +1,28 @@
 <!--todo-->
-fsdssdfsdfssf
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+
+    <div class="gridwrapper">
+
+        <section class="h"></section>
+        <section class="s1"></section>
+        <section class="s2"></section>
+        <section class="s3"></section>
+        <section class="s4"></section>
+        <section class="f"></section>
+
+    </div>
+
+    <img class="logo" src="img/Grägrä_bilder/makerspace_logo.png">
+    
+    
+</body>
+</html>
