--- a/misc/planering.html
+++ b/misc/planering.html
@@ -40,9 +40,11 @@
         <tr>
             <td>4</td>
             <td>
+                Ta reda på vad jag vill göra. Möjligtvis väljer jag MakerSpace.
             <!-- Vad görs på lektionen vecka 4? -->
             </td>
             <td>
+                Fortsätta ta reda på vad jag vill göra om jag inte vet på lektionen, eventuellt söka inspiration via nätet.
             <!-- Vad görs utanför lektionen vecka 4? -->
             </td>
         </tr>
@@ -50,9 +52,11 @@
         <tr>          
             <td>5</td>
             <td>
+                Bestämma hur index sidan skall se ut, fundera på andra sidor
             <!-- Vad görs på lektionen vecka 5? -->
             </td>
             <td>
+                
             <!-- Vad görs utanför lektionen vecka 5? -->
             </td>
         </tr>
