--- a/misc/planering.html
+++ b/misc/planering.html
@@ -64,6 +64,8 @@
         <tr>          
             <td>6</td>
             <td>
+                forsatte på samma sak som förra veckan,
+
             <!-- Vad görs på lektionen vecka 6? -->
             </td>
             <td>
@@ -74,6 +76,7 @@
         <tr>           
             <td>7</td>
             <td>
+                började försöka få min meny att fungera, den krånglar. Det hamnar inte riktigt där jag vill
             <!-- Vad görs på lektionen vecka 7? -->
             </td>
             <td>
@@ -84,6 +87,8 @@
         <tr>           
             <td>8</td>
             <td>
+                jag jobade med samma som förra veckan, men jag försökte få korset att funka, den är just nu nere till vänster, men jag vill ha den
+                uppe till höger. 
             <!-- Vad görs på lektionen vecka 8? -->
             </td>
             <td>
@@ -94,6 +99,7 @@
         <tr>          
             <td>9</td>
             <td>
+                försökte lösa menyn, den krånglar, gjort klar den i princip, men lite saker ligger fel
             <!-- Vad görs på lektionen vecka 9? -->
             </td>
             <td>
@@ -104,6 +110,8 @@
         <tr>          
             <td>10</td>
             <td>
+                Jag jobbade med min many samt började på att
+                försöka anpassa till både mobil och web. Lyckades göra klart min meny, äntligen
             <!-- Vad görs på lektionen vecka 10? -->
             </td>
             <td>
@@ -114,10 +122,15 @@
         <tr>           
             <td>11</td>
             <td>
+                Den har anpassats mycket bättre till mobil och web, nästa steg blir
+                att länka till andra sidor oh lägga in text och eventuella bilder.
+                Jag gjorde även animationer, för att det skall vara lite extra kul  att använda.
+
             <!-- Vad görs på lektionen vecka 11? -->
             </td>
             <td>
             <!-- Vad görs utanför lektionen vecka 11? -->
+            Länka in fler sidor, lägga till text och ev bilder.
             </td>
         </tr>
 
