--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <nav>
 
             <ul class="navLinks">
-                <li><a href="#">Bilder</a></li>
-                <li><a href="#">Kontakter</a></li>
-                <li><a href="#">Övrigt</a></li>
-                <li><a href="#">Hem</a></li>
+                <li><a href="https://www.ntigymnasiet.se/johanneberg/">NTI</a></li>
+                <li><a href="sida_2.html">Boka</a></li>
+                <li><a href="sida_3.html">Övrigt</a></li>
+                <li><a href="sida_4.html">Kontakter</a></li>
             </ul>
         
             <div class="burger">
@@ -34,7 +34,7 @@
 
 
         <section class="h"></section>
-        <section class="s1"></section>
+        <section class="s1">Hej och välkommen till MakerSpace, du skall få välja vad du vill göra. Detta gör du genom att välja ett av alternativen i 'nav-baren' ovan :)</section>
         <section class="s2"></section>
         <section class="s3"></section>
         <section class="s4"></section>
