--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
             <ul class="navLinks">
                 <li><a href="https://www.ntigymnasiet.se/johanneberg/">NTI</a></li>
-                <li><a href="sida_2.html">Boka</a></li>
+                <li><a href="sida_2_boka.html">Boka</a></li>
                 <li><a href="sida_3.html">Övrigt</a></li>
                 <li><a href="sida_4.html">Kontakter</a></li>
             </ul>
