--- a/sida_2_boka.html
+++ b/sida_2_boka.html
@@ -17,8 +17,8 @@
 
             <ul class="navLinks">
                 <li><a href="https://www.ntigymnasiet.se/johanneberg/">NTI</a></li>
-                <li><a href="sida_2.html">Boka</a></li>
-                <li><a href="sida_3.html">Övrigt</a></li>
+                <li><a href="sida_2_boka.html">Boka</a></li>
+                <li><a href="sida_3_mitt_konto.html">Övrigt</a></li>
                 <li><a href="sida_4.html">Kontakter</a></li>
             </ul>
         
@@ -35,10 +35,10 @@
         <nav class="bokningNav">
 
             <ul class="bokningLinks">
-                <li class="boka_text"><a href="boka.html" style="text-decoration: none;">BOKA!</a></li>
+                <li class="boka_text"><a href="#" style="text-decoration: none;">BOKA!</a></li>
                 <li><a href="#" style="text-decoration: none;">BOKNINGAR</a></li>
                 <li><a href="#" style="text-decoration: none;">HJÄLP</a></li>
-                <li><a href="#" style="text-decoration: none;">MITT KONTO</a></li>
+                <li><a href="sida_3_mitt_konto.html" style="text-decoration: none;">MITT KONTO</a></li>
             </ul>
         
             <div class="bokning">
