--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <ul class="navLinks">
                 <li><a href="https://www.ntigymnasiet.se/johanneberg/">NTI</a></li>
                 <li><a href="sida_2_boka.html">Boka</a></li>
-                <li><a href="sida_3.html">Övrigt</a></li>
-                <li><a href="sida_4.html">Kontakter</a></li>
+                <li><a href="index.html">Hem</a></li>
+                <li><a href="sida_3_mitt_konto.html">Mitt konto</a></li>
             </ul>
         
             <div class="burger">
