--- a/misc/planering.html
+++ b/misc/planering.html
@@ -138,9 +138,12 @@
             <td>12</td>
             <td>
             <!-- Vad görs på lektionen vecka 12? -->
+            Jag jobbade med att fixa min "skapa konto", för den la sig inte där jag ville samt storleken var inte bra
             </td>
             <td>
             <!-- Vad görs utanför lektionen vecka 12? -->
+            Jag ändrade färgtemat samt ändrade länkar till sidor samt la till extra länkar.
+            Dessutom har jag fixat ytterligare med skapa konto knappen, den är som jag vill.
             </td>
         </tr>
 
@@ -176,11 +179,39 @@
 
     <h2>4. Testning</h2>
     <!-- Testa i Chrome + Firefox eller Safari (på både dator och mobil). Skiljer sig resultatet? Har du behövt anpassa ditt kod/innehåll efter de olika webbläsarna? Hur gick valideringen? Vad säger contrastchecker.com om text/bakgrundsfärg? Hur ser resultatet ut på en riktig telefon? -->
+    Jag har testat kontraster, de var bra på alla tester. Jag har testat med mobil och det har funkat bra, det skilljer sig inte som jag trodde, det kan
+    bero på att jag har Iphone x. Andra som gjort tester med äldre mobiler eller andra märken har haft lite olika resultat. Jag har dock inte kollat via firefox, men koden
+    hävdar på hemsidor att det inte bör bli problem. Men jag har inte testat detta.
 
     <h2>5. Utvärdering</h2>
     <!-- Ex: Vad gick bra/mindre bra? (i arbetet/din förmåga).
     Nyanserat: "hur hade det blivit om jag istället hade...?"
     Konkreta förbättringsförslag i produkt + process. -->
+    Detta arbetet gick väldigt såligt, jag har inte alls gjort så bra som jag hade velat, detta beror på att har
+    varit stressigt för mig med andra ämnen, så jag har behövt lägga tid på annat än webweb. Därför är jag väldigt missnöjd med
+    arbetet. Ingenting gick speciellt super bra, men det positiva var att det jag har gjort, som är på plats funkar bra.
+    Jag är nöjd med färger, det estetiska i mitt gränssnitt samt att det är lätt att navigera i min produkt. Men det
+    finns så lite av den att jag lika gärna hade kunna skippa att göra den. Är som sagt missnöjd, men hoppas att betygen inte
+    kan förstöras allt för mycket pga att jag inte kunnat lägga tiden jag vill.
 
+    Om jag hade haft mer tid hade jag kollat ifall det är anpassat för olika browsers, och dessutom gjort en inspelning om hur man använder
+    produkten. Men eftersom det nu inte finns något innehåll behövs inte en film. 
+
+    Jag hade velat jobba med att faktiskt lägga till saker på sidorna, jag borde ha jobbat på under lektionerna bättre, 
+    jag visste inte att det skulle bli som det blev, men jag bör i fortsättningen jobba och lägga upp en tydlig plan kring Huroch vad jag skal
+    göra under vissa lektioner. Alltså som jag gör i grägrä
+    Hade jag istället gjort upp en plan hade jag kunnat se hur mycket tid det hade blivit kvar ifall jag missade några lektioners arbete. Vilket
+    skulle gjort att jag skulle kunnat anpassa mig.
+
+    Hade jag gjort upp en plan, tydlig, kring hur min sida skulle se ut hade jag inte haft problem. Dessutom hade jag en aldeles för
+    ambitiös sida för att hinna med, den skulle haft med bokning, men hade jag istället gjort en sida för fotografi eller
+    om fysik hade jag kunnat gå runt jobbiga problem som att fixa en app som måste ta sig igenom 10-15 steg där man bokar en maskin,
+    det tar för lång tid, och hade jag insett detta tidigt med hjälp av att kolla hur min plannering skulle bli, hade jag valt ett
+    annat område, projekt. Helt enkelt hade jag haft tid att visa mina kunskaper som jag nu inte kunnat visa förutom på en sida. Men det
+    räcker inte för att nå det betyg jag vill ha.
+
+    Jag hoppas på ett annat projekt där jag kan välja att göra någonting där jag kan läggaupp en plan och göra någonting som
+    faktiskt är rimligt men kan göra att jag får A i kursen.
+    </div>
 </body>
 </html>
