--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav>
 
             <ul class="navLinks">
-                <li><a href="https://www.ntigymnasiet.se/johanneberg/">NTI</a></li>
+                <li><a href="sida_4_NTI.html">NTI</a></li>
                 <li><a href="sida_2_boka.html">Boka</a></li>
                 <li><a href="index.html">Hem</a></li>
                 <li><a href="sida_3_mitt_konto.html">Mitt konto</a></li>
