--- a/sida_2_boka.html
+++ b/sida_2_boka.html
@@ -16,7 +16,7 @@
         <nav>
 
             <ul class="navLinks">
-                <li><a href="https://www.ntigymnasiet.se/johanneberg/">NTI</a></li>
+                <li><a href="sida_4_NTI.html">NTI</a></li>
                 <li><a href="sida_2_boka.html">Boka</a></li>
                 <li><a href="index.html">Hem</a></li>
                 <li><a href="sida_3_mitt_konto.html">Mitt konto</a></li>
@@ -31,23 +31,8 @@
         </nav>
 
         <script src="script.js"></script>
+        <!--Hade två länkar till script, tog bort en-->
 
-        <nav class="bokningNav">
-
-            <ul class="bokningLinks">
-                <li class="boka_text"><a href="#" style="text-decoration: none;">BOKA!</a></li>
-                <li><a href="#" style="text-decoration: none;">BOKNINGAR</a></li>
-                <li><a href="#" style="text-decoration: none;">HJÄLP</a></li>
-                <li><a href="sida_3_mitt_konto.html" style="text-decoration: none;">MITT KONTO</a></li>
-            </ul>
-        
-            <div class="bokning">
-                <div class="bokningBox"></div>
-            </div>
-
-        </nav>
-
-        <script src="script.js"></script>
 
 
         <section class="h"></section>
