--- a/a_skall_inte_vara_kvar.html
+++ b/a_skall_inte_vara_kvar.html
@@ -15,10 +15,10 @@
         <nav>
 
             <ul class="navLinks">
-                <li><a href="https://www.ntigymnasiet.se/johanneberg/">NTI</a></li>
-                <li><a href="sida_2.html">Boka</a></li>
-                <li><a href="sida_3.html">Övrigt</a></li>
-                <li><a href="sida_4.html">Kontakter</a></li>
+                <li><a href="sida_4_NTI.html">NTI</a></li>
+                <li><a href="sida_2_boka.html">Boka</a></li>
+                <li><a href="index.html">Hem</a></li>
+                <li><a href="sida_3_mitt_konto.html">Konto</a></li>
             </ul>
         
             <div class="burger">
