--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <li><a href="sida_4_NTI.html">NTI</a></li>
                 <li><a href="sida_2_boka.html">Boka</a></li>
                 <li><a href="index.html">Hem</a></li>
-                <li><a href="sida_3_mitt_konto.html">Mitt konto</a></li>
+                <li><a href="sida_3_mitt_konto.html">Konto</a></li>
             </ul>
         
             <div class="burger">
@@ -34,8 +34,25 @@
 
 
         <section class="h"></section>
-        <section class="s1">Hej och välkommen till MakerSpace, du skall få välja vad du vill göra. Detta gör du genom att välja ett av alternativen i 'nav-baren' ovan :)</section>
-        <section class="s2"></section>
+        <section class="s1">
+            <br>
+            <br>
+            <br>
+            Hej och välkommen till MakerSpace, du skall få välja vad du vill göra. Detta gör du genom att välja ett av alternativen i 'nav-baren' ovan :)</section>
+        <section class="s2">
+            <br>
+            <br>
+            NTI - här hittar du fakta om skolan där MakerSpace håller hus. Det finns länkar till olika sociala medier som du skulle kunna följa för att få uppdateringar. Dessutom skulle du komma närmare NTI andan en aning ;)
+            <br>
+            <br>
+            Boka - här är bokar du en 3D-skrivare, men detta alternativet är endast för de elever som går på NTI Johanneberg. Dessutom förutsätts det att de som bokar har lite förkunskaper, det brukar dock alltid finnas hjälp på plats om det skulle behövas :)
+            <br>
+            <br>
+            Hem - är där du befinner dig just nu, alltså på denna sidan ;)
+            <br>
+            <br>
+            Konto - Denna är tillåter dig att göra ett konto så att du snabbare kan boka in tider för att 3D-printa. Här gör du helt enkelt ett konto som tillåter dig att bli notifierad när information släpps gällande allt möjligt :)
+        </section>
         <section class="s3"></section>
         <section class="s4"></section>
         <section class="f"></section>
