--- a/sida_4_NTI.html
+++ b/sida_4_NTI.html
@@ -16,10 +16,10 @@
         <nav>
 
             <ul class="navLinks">
-                <li><a href="sida_4_NTI.html">NTI</a></li>
+                <li><a href="sida_5.html">NTI</a></li>
                 <li><a href="sida_2_boka.html">Boka</a></li>
                 <li><a href="index.html">Hem</a></li>
-                <li><a href="sida_3_mitt_konto.html">Mitt konto</a></li>
+                <li><a href="sida_3_mitt_konto.html">Konto</a></li>
             </ul>
         
             <div class="burger">
@@ -36,31 +36,54 @@
 
 
         <section class="h"></section>
-        <section class="s1">Välkommen till NTI Johanneberg, här kan du få reda på lite om skolan.</section>
-        <section class="s2"></section>
+        <section class="s1">
+            <br>
+            <br>
+            Välkommen till NTI Johanneberg, här kan du få reda på lite om skolan.</section>
+        <section class="s2">På skolan går ca 450 elever på skolan
+            <br>
+            <br>
+            Årskurs 1 och 2 äter lunch på restaurangen FOXES vid Gibraltargatan
+            <br>
+            Årskurs 3 får matkort
+            <br>
+            <br>
+            Teknikprogrammet och IT-programmet får en PC medans Designprogrammet får en Mac
+            <br>
+            <br>
+            Själva skolan ligger på Origovägen 4 när Chalmers
+            <br>
+            <br>
+            Inte minst erbjuder skolan läxhjälp, men om man skulle vilja finns Chalmersbibloteket väldigt nära till hands
+            <br>
+            <br>
+            <br>
+            <br>
+            Varför skall man välja NTI Johanneberg?
+            <br>
+            Jo, för vi har Nasir
+        </section>
         <section class="s3"></section>
         <section class="s4"></section>
         <section class="f">
-        <!--<nav class="social_media_nav">
+        <nav class="social_media_nav">
             <ul class="social_media_links">
                 <li>
-                    <a href="https://www.facebook.com/ntijohanneberg/" target="_blank" a style="text-decoration: none;"><p>facebook</p></a>
+                    <a href="https://www.facebook.com/ntijohanneberg/" target="_blank" a style="text-decoration: none;"><p></p></a>
                 </li>
                 <li>
-                    <a href="https://www.youtube.com/channel/UCf7DmB9NKTJ86MOn4sPON3w" target="_blank" a style="text-decoration: none;"><p>youtube</p></a>
+                    <a href="https://www.youtube.com/channel/UCf7DmB9NKTJ86MOn4sPON3w" target="_blank" a style="text-decoration: none;"><p></p></a>
                 </li>
                 <li>
-                    <a href="https://www.instagram.com/ntijohanneberg/" target="_blank" a style="text-decoration: none;"><p>instagram</p></a>
+                    <a href="https://www.instagram.com/ntijohanneberg/" target="_blank" a style="text-decoration: none;"><p></p></a>
                 </li>
             </ul>
-        </nav>-->
-
+        </nav>
        <div class="circles">
            <div class="circle1"><a href="https://www.facebook.com/ntijohanneberg/" target="_blank" a style="text-decoration: none;"><p>facebook</p></a></div>
            <div class="circle2"><a href="https://www.youtube.com/channel/UCf7DmB9NKTJ86MOn4sPON3w" target="_blank" a style="text-decoration: none;"><p>youtube</p></a></div>
            <div class="circle3"><a href="https://www.instagram.com/ntijohanneberg/" target="_blank" a style="text-decoration: none;"><p>instagram</p></a></div>
        </div>
-
         </section>
         
          <!--<img class="logo" src="img/Grägrä_bilder/makerspace_logo.png">-->
